fix vertical image stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,9 +58,8 @@ body {
 }
 
 .gallery-item img { 
-  max-height: 100%;
+  max-height: 200px;
   max-width: fit-content;
-  width:100%;
   margin: 0 auto;
  }
 .gallery-item-active { border:2px solid red; }
